# b3personalassistant

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCS.md  B3PersonalAssistant.spec  CODE_QUALITY_STANDARDS.md  CONTRIBUTING.md  CURRENT_INTERFACE_OVERVIEW.md  DESKTOP_APP_COMPLETE.md  DESKTOP_APP_DESIGN.md  DOCUMENTATION_SUMMARY.md  Dockerfile  FEATURES.md  FIXES_APPLIED.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  OLLAMA_INSTALLATION_GUIDE.md  ONBOARDING_GUIDE.md  PACKAGING_GUIDE.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  RESILIENCE_IMPROVEMENTS.md  STREAMLINING_SUMMARY.md  TESTING_ONBOARDING.md  TROUBLESHOOTING.md  TROUBLESHOOTING_REPORT.md  USER_GUIDE.md  VERIFICATION_REPORT.md  VIDEO_EDITING_GUIDE.md  VIDEO_FRAMEWORK_STATUS.md  VIDEO_STATUS_AND_MINIMAL_UI.md  VIDEO_WORKFLOW_GUIDE.md  VIDEO_WORKFLOW_SUMMARY.md  (+31 more)
.github/workflows/: build-executables.yml  ci.yml  quality.yml
config/: agents.json
core/: __init__.py  agent_communication.py  agents.py  code_generation_tracker.py  config.py  constants.py  context_manager.py  database_migrations.py  exceptions.py  health_monitor.py  logging_config.py  orchestrator.py  performance.py  resilience.py  self_improvement.py  validators.py
interfaces/: __init__.py  cli_launcher.py  gui_launcher.py
interfaces/desktop_app/: README.md  __init__.py  main_window.py
interfaces/desktop_app/dialogs/: __init__.py  onboarding_wizard.py  tutorial_dialog.py
interfaces/desktop_app/panels/: __init__.py  agent_panel.py  file_tree_panel.py  research_panel.py  video_panel.py  writing_panel.py
interfaces/desktop_app/utils/: __init__.py  theme.py
interfaces/desktop_app/widgets/: __init__.py  markdown_editor.py  pdf_viewer.py  video_player.py
interfaces/web_api/: main.py
interfaces/web_api/static/: app.js  index.html
modules/: __init__.py  academic_search.py  batch_import.py  citation_manager.py  conversation.py  document_export.py  document_processing.py  knowledge.py  onboarding.py  resources.py  sample_data.py  semantic_search.py  task_management.py  tasks.py  video_creator.py  video_processing.py  voice_interface.py  workflow_engine.py
modules/agents/: multimodal_agent.py  proactive_agent.py
modules/integrations/: calendar_integration.py  gmail_integration.py
monitoring/: health_check.py
scripts/: init_database.py  start_production.py  update_agent_resilience.py
test_X/A/: A1.md  A2.md  A3.md
tests/: __init__.py  conftest.py  test_academic_features.py  test_core.py  test_database_migrations.py  test_logging_config.py  test_new_features.py  test_onboarding.py  test_property_based.py  test_resilience.py  test_validators.py  test_web_api.py  test_zettelkasten_integration.py
