[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b3personalassistant"
version = "1.0.0"
description = "A revolutionary multi-agent AI personal assistant system with Zettelkasten knowledge management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "B3PersonalAssistant Team", email = "team@b3personalassistant.com"}
]
maintainers = [
    {name = "Prof. B3", email = "prof.b3@temporal-research.org"}
]
keywords = ["ai", "personal-assistant", "multi-agent", "zettelkasten", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Topic :: Database",
]
requires-python = ">=3.8"
dependencies = [
    "ollama>=0.1.0",
    "autogen>=0.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
    "colorama>=0.4.6",
    "tqdm>=4.65.0",
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "typing-extensions>=4.7.0",
    "moviepy>=1.0.3",
    "scenedetect>=0.6.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.80.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pre-commit>=3.3.0",
]
gui = [
    "tkinter",
    "pillow>=10.0.0",
]
full = [
    "autogen>=0.2.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]
multimodal = [
    "pytesseract>=0.3.10",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "openai-whisper>=20231117",
    "sentence-transformers>=2.2.0",
]
integrations = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.13",
    "pyttsx3>=2.90",
    "gTTS>=2.4.0",
    "librosa>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/B3PersonalAssistant"
Documentation = "https://github.com/yourusername/B3PersonalAssistant/wiki"
Repository = "https://github.com/yourusername/B3PersonalAssistant.git"
"Bug Tracker" = "https://github.com/yourusername/B3PersonalAssistant/issues"
"Temporal Research Institute" = "https://temporal-research.org"

[project.scripts]
b3assistant = "B3PersonalAssistant.run_assistant:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["B3PersonalAssistant*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["B3PersonalAssistant"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = false  # Gradually enable
check_untyped_defs = true
disallow_untyped_decorators = false  # Gradually enable
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Gradually increase strictness for core modules
[[tool.mypy.overrides]]
module = "core.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "core.database_migrations"
disallow_incomplete_defs = true

# Ignore missing imports for third-party packages
[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "moviepy.*",
    "scenedetect.*",
    "cv2.*",
    "PIL.*",
    "PyPDF2.*",
    "fitz.*",
    "docx.*",
    "autogen.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=core",
    "--cov=modules",
    "--cov-report=html",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_ollama: requires Ollama to be running",
]

[tool.coverage.run]
source = ["B3PersonalAssistant"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

# ===========================
# Pylint Configuration
# ===========================
[tool.pylint.main]
jobs = 0
py-version = "3.8"
suggestion-mode = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring (we have them but pylint is picky)
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access (needed for testing)
    "W0511",  # fixme/todo comments
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 8
max-statements = 60
min-public-methods = 0

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
min-similarity-lines = 6 